# NeatAmpTAS3251-IK

./: Netlist_Class_D_amp_2026-07-23.enet  README.md
EasyEDA-Pro/: Class D amp.eprj  Class D amp_20260623161020.eprj_backup  Class D amp_copy.eprj2
EasyEDA-Pro/Class D amp_backup/: Class D amp_2026-06-21-14-26.epro2  Class D amp_2026-06-22-17-44.epro2
EasyEDA-Pro/Class D amp_copy_backup/: Class D amp_copy_2026-06-24-14-28.epro2  Class D amp_copy_2026-06-25-14-17.epro2  Class D amp_copy_2026-06-25-21-38.epro2  Class D amp_copy_2026-06-26-10-20.epro2  Class D amp_copy_2026-06-27-12-20.epro2  Class D amp_copy_2026-06-27-13-20.epro2
EasyEDA-Pro/libraries/: TAS3251Components.elib
KiCADv5_02_files_Validated/: Coilcraft_pspice_XGL1712-103.lib  LMQ66430R5RXBR.dcm  LMQ66430R5RXBR.kicad_sym  LMQ66430R5RXBR.lib  LMQ66430R5RXBR.mod  LMQ66430R5RXBR.stp  LMR66430R5RXBR.kicad_mod  MA5172-AE.dcm  MA5172-AE.kicad_sym  MA5172-AE.lib  MA5172-AE.mod  MA5172AE.kicad_mod
KiCADv5_02_files_Validated/TAS3251JMF_MCU_Clean_Ref_KiCADv5_02/: AAP090A_PowerSupplies-SchDoc-rescue.lib  AAP090A_TAS3251DKQ-IO-SchDoc-rescue.kicad_sym  AAP090A_TAS3251DKQ-IO-SchDoc-rescue.lib  MA5172-AE.kicad_sym  (+24 more)
tas/: .gitignore  CMakeLists.txt  Doxyfile  README.md  pytest_tas.py  sdkconfig.defaults
tas/main/: CMakeLists.txt  dsp_adau1466.cpp  dsp_adau1466.hpp  i2c_bus.cpp  i2c_bus.hpp  i2s_bus.cpp  i2s_bus.hpp  power_supplies.cpp  power_supplies.hpp  status_led.cpp  status_led.hpp  system_controller.cpp  system_controller.hpp  tas3251.cpp  tas3251.hpp  tas_main.c  tas_main.cpp  tas_pins.c  tas_pins.h
(+7 files in other folders)
